--- a/index.html
+++ b/index.html
@@ -6,10 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link data-default-icon="https://static.cdninstagram.com/rsrc.php/yS/r/f_5NUHW7AZC.ico" rel="shortcut icon"
+        type="image/x-icon" href="https://static.cdninstagram.com/rsrc.php/yS/r/f_5NUHW7AZC.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    Hello World!
+    <div class="SITE">
+        <div class="SITE-BOX">
+            <div class="header">
+                <div class="header-objects">
+                    <div class="header-logos">
+                        <div class="logos">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                            <div class="vl"></div>
+                            <img src="resources/logo.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="header-search">
+                        <p>Pesquisar</p>
+                    </div>
+
+                    <div class="header-icons">
+                        <div class="icons">
+                            <ion-icon name="paper-plane-outline"></ion-icon>
+                            <ion-icon name="compass-outline"></ion-icon>
+                            <ion-icon name="heart-outline"></ion-icon>
+                            <ion-icon name="person-outline"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-stories">
+                <div class="story"></div>
+            </div>
+            
+            <div class="container-posts">
+                <div class="posts"></div>
+            </div>
+        </div>
+    </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 
 </html>
