finished desktop version

--- a/index.html
+++ b/index.html
@@ -49,7 +49,63 @@
 
             <div class="CONTAINER-LEFT">
                 <div class="container-stories">
-                    <div class="story"></div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/9gag 1storie.png" alt="">
+                        </div>
+                        <p>9gag</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/meowed 1storie.png" alt="">
+                        </div>
+                        <p>meowed</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/barked 1storie.png" alt="">
+                        </div>
+                        <p>barked</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/nathanwpylestrangeplanet 1storie.png" alt="">
+                        </div>
+                        <p>nathanwpyle...</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/wawawiwacomicsa 1storie.png" alt="">
+                        </div>
+                        <p>wawawiwac...</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/respondeai 1storie.png" alt="">
+                        </div>
+                        <p>respondeai</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/filomoderna 1storie.png" alt="">
+                        </div>
+                        <p>filomoderna</p>
+                    </div>
+                    <div class="story">
+                        <div class="container-story-img">
+                            <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
+                            <img class="story-img" src="/resources/stories/memeriagourmet 1storie.png" alt="">
+                        </div>
+                        <p>memeriagourmet</p>
+                    </div>
                 </div>
 
                 <div class="container-posts">
@@ -143,14 +199,73 @@
                         <div>
                             <img src="/resources/sidebar/catanacomics 1.png" alt="">
                         </div>
-                        <div>
-                            <div><h1><b>catanacomics</b></h1></div>
-                            <div><h2>Catana</h2></div>
+                        <div class="profile">
+                            <div class="profile-nome">
+                                <h1><b>catanacomics</b></h1>
+                            </div>
+                            <div class="profile-nome-fantasia">
+                                <h2>Catana</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="suggestions">
                         <h1>Sugestões para você</h1>
-                        <h2>Ver tudo</h2>
+                        <h2><b>Ver tudo</b></h2>
+                    </div>
+                    <div class="container-suggestions-follow">
+                        <div class="suggestions-follow">
+                            <img src="/resources/sidebar/badvibesmemes 1.png" alt="">
+                            <div class="profile-name">
+                                <h1><b>bad.vibes.memes</b></h1>
+                                <h2>Segue você</h2>
+                            </div>
+                            <p>Seguir</p>
+                        </div>
+
+                        <div class="suggestions-follow">
+                            <img src="/resources/sidebar/chibirdart 1.png" alt="">
+                            <div class="profile-name">
+                                <h1><b>chibirdart</b></h1>
+                                <h2>Segue você</h2>
+                            </div>
+                            <p>Seguir</p>
+                        </div>
+
+                        <div class="suggestions-follow">
+                            <img src="/resources/sidebar/razoesparaacreditar 1.png" alt="">
+                            <div class="profile-name">
+                                <h1><b>razoesparaacreditar</b></h1>
+                                <h2>Novo no Instagram</h2>
+                            </div>
+                            <p>Seguir</p>
+                        </div>
+
+                        <div class="suggestions-follow">
+                            <img src="/resources/sidebar/adorableanimals 1.png" alt="">
+                            <div class="profile-name">
+                                <h1><b>adorable_animals</b></h1>
+                                <h2>Segue você</h2>
+                            </div>
+                            <p>Seguir</p>
+                        </div>
+
+                        <div class="suggestions-follow">
+                            <img src="/resources/sidebar/smallcutecats 1.png" alt="">
+                            <div class="profile-name">
+                                <h1><b>smallcutecats</b></h1>
+                                <h2>Segue você</h2>
+                            </div>
+                            <p>Seguir</p>
+                        </div>
+                        <div class="container-sidebar-footer">
+                            <div class="sidebar-footer">
+                                Sobre • Ajuda • Imprensa • API • Carreiras • Privacidade • Termos • Localizações •
+                                Contas mais relevantes • Hashtags • Idioma
+                            </div>
+                            <div class="sidebar-marca">
+                                © 2021 INSTAGRAM DO FACEBOOK
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
