desktop finalizada e mobile em andamento

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             </div>
         </div>
         <div class="SITE-BOX">
-
             <div class="CONTAINER-LEFT">
                 <div class="container-stories">
+                    <ion-icon class="setinha" name="chevron-forward-circle"></ion-icon>
                     <div class="story">
                         <div class="container-story-img">
                             <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
@@ -104,7 +104,7 @@
                             <img class="story-bg" src="/resources/stories/stories_background.jpg" alt="">
                             <img class="story-img" src="/resources/stories/memeriagourmet 1storie.png" alt="">
                         </div>
-                        <p>memeriagourmet</p>
+                        <p>memeriagour..</p>
                     </div>
                 </div>
 
