--- a/index.html
+++ b/index.html
@@ -42,9 +42,24 @@
                             <ion-icon name="person-outline"></ion-icon>
                         </div>
                     </div>
+                    <div class="header-mobile">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                        <img src="resources/logo.png" alt="">
+                        <ion-icon name="paper-plane-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-objects">
+                    <ion-icon name="home"></ion-icon>
+                    <ion-icon name="search-outline"></ion-icon>
+                    <ion-icon name="add-circle-outline"></ion-icon>
+                    <ion-icon name="heart-outline"></ion-icon>
+                    <ion-icon name="person-outline"></ion-icon>
                 </div>
             </div>
         </div>
+
         <div class="SITE-BOX">
             <div class="CONTAINER-LEFT">
                 <div class="container-stories">
