--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <ion-icon class="setinha" name="chevron-forward-circle"></ion-icon>
                     <div class="story">
                         <div class="container-story-img">
-                            <img class="story-bg" src="./resources/stories/stories_background.png" alt="">
+                            <img class="story-bg" src="resources/stories/stories_background.png" alt="">
                             <img class="story-img" src="/resources/stories/9gag 1storie.png" alt="">
                         </div>
                         <p>9gag</p>
