--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="story">
                         <div class="container-story-img">
                             <img class="story-bg" src="resources/stories/stories_background.png" alt="">
-                            <img class="story-img" src="/resources/stories/9gag 1storie.png" alt="">
+                            <img class="story-img" src="./resources/stories/9gag 1storie.png" alt="">
                         </div>
                         <p>9gag</p>
                     </div>
